--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0%;
     margin: 0%;
     color: whitesmoke;
+    /* overflow: hidden; */
 }
 #title h1{
     color: rgb(219, 219, 0);
@@ -22,14 +23,15 @@
     justify-content: space-around;
 }
 #displaybox div {
-    height: 7rem;
-    width: 7rem;
-    text-align: center;
-    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 8rem;
+    width: 8rem;
     margin: 2rem 0 1rem 0;
+    padding: 1rem;
     background-color: rgb(197, 141, 250);
     font-size: 250%;
-    border: 0;
     border-radius: 2rem;
     color: black;
 }
@@ -37,6 +39,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 1rem 0;
 }
 #score div {
     text-align: center;
@@ -46,10 +49,33 @@
     text-align: center;
     padding:1rem;
     font-size: 100%;
+    color:rgb(129, 255, 226)
 }
 #action{
     display: flex;
     justify-content: space-around;
     font-size: 200%;
+    margin: 1rem 0;
 }
+#description {
+    text-align: center;
+    width: 100%;
+    background: rgb(253, 78, 78);
+}
+#results {
+    visibility: hidden;
+    position:fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-size: 300%;
+    background-color: rgba(255, 253, 253, 0.582);
+}
+#retry {
+    font-size: 150%;
+}
+
 
